style.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900');
@import url('https://fonts.googleapis.com/css?family=Bungee+Inline');

*:not(fa) {
    font-family: 'Montserrat', sans-serif !important;
}

body {
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#001523+0,000000+100 */
    background: #001a3f;
    background: -moz-radial-gradient(center, ellipse cover, #001a3f 0%, #000000 100%);
    background: -webkit-radial-gradient(center, ellipse cover, #001a3f 0%,#000000 100%);
    background: radial-gradient(ellipse at center, #001a3f 0%,#000000 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001a3f', endColorstr='#000000',GradientType=1 );
    overflow: hidden;
}

#title {
  color: white;
  font-size: 5em;
  text-transform: uppercase;
  font-weight: 700;
  text-align: center;
  margin-top: 25px;
  width: 100%;
  height: 100px;
  margin-bottom: -100px;
  font-family: 'Bungee Inline', cursive !important;
}

#spaceContainer {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

.planet {
    width: 15vw;
    text-align: center;
    position: absolute;
    border-radius: 100%;
    transition: all 80ms ease-in-out;
}

.planet img{
      width: 100%;
      transition: all 80ms ease-in-out;
}

.planet:not(#sun):hover img {
    cursor: pointer;
    transform:scale(1.25); /* Safari and Chrome /
    -moz-transform:scale(1.25); / Firefox /
    -ms-transform:scale(1.25); / IE 9 /
    -o-transform:scale(1.25); / Opera */
     transform:scale(1.25);
     margin-bottom: 5px;
}


.planet#sun:hover img {
    cursor: pointer;
    transform:scale(1.10); /* Safari and Chrome /
    -moz-transform:scale(1.10); / Firefox /
    -ms-transform:scale(1.10); / IE 9 /
    -o-transform:scale(1.10); / Opera */
     transform:scale(1.10);
}

.planetName {
    color: white;
    text-align: center;
    font-weight: 700;
    border-radius: 5px;
    margin-top: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}



#sun {
    z-index: 9999;
    width: 11vw;
}

#mercury {
    z-index: 9998;
    width: 1.5vw;
    margin-left: -8.2vw;
    margin-top: -1.1vw;
}

#venus {
    z-index: 99979;
    width: 2.5vw;
    margin-left: 9.6vw;
    margin-top: -2.1vw;
}

#earth {
    z-index: 9996;
    width: 2.5vw;
    margin-left: 16.9vw;
    margin-top: 1.9vw;
}

#mars {

    z-index: 9995;
    width: 2vw;
    margin-left: -8.5vw;
    margin-top: 8vw;
}

#jupiter {
    z-index: 9994;
    width: 5vw;
    margin-left: -25vw;
    margin-top: -3.6vw;
}

#saturn {
    z-index: 9993;
    width: 8vw;
    margin-left: 35vw;
}

#uranus {
    z-index: 9992;
    width: 2vw;
    margin-left: -35.3vw;
    margin-top: 8.6vw;
}

#neptune {
    z-index: 9991;
    width: 2vw;
    margin-left: -13.9vw;
    margin-top: 15.4vw;
}

#pluto {
    z-index: 9990;
    width: 1vw;
    margin-left: -19.4vw;
    margin-top: -14vw;
}

.planetOrbit {
    border: 2px solid rgba(255, 255, 255, 0.2);
    border-radius: 100%;
    position: absolute;
    z-index: 99999;
    transform-style: preserve-3d;
    transform: rotateX(70deg);
    pointer-events: none;
}

#orbit1 {
    width: 20vw;
    height: 20vw;
}

#orbit2 {
    width: 25vw;
    height: 25vw;
}

#orbit3 {
    width: 35vw;
    height: 35vw;
}

#orbit4 {
    width: 45vw;
    height: 45vw;
}

#orbit5 {
    width: 55vw;
    height: 55vw;
}

#orbit6 {
    width: 70vw;
    height: 70vw;
}

#orbit7 {
    width: 85vw;
    height: 85vw;
}

#orbit8 {
    width: 90vw;
    height: 90vw;
}

#orbit9 {
    width: 95vw;
    height: 95vw;
}


#siteText {
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
    display: inline-block;
    padding: 15px;
    border: 1px solid rgba(255, 255, 255, 0.35);
    border-radius: 5px;
    width: 33%;
    position: absolute;
    right: 0;
    bottom: 0;
    margin: 25px;
    height: 150px;
    overflow: auto;
    font-size: 0.9em;
}


@media only screen and (max-width: 800px) {
  body{
    overflow: auto;
  }

  #spaceContainer {
    position: relative;
    display: block;
    justify-content: unset;
    align-items: unset;
    float: left;
    clear: both;
    margin-top: 100px;
  }

  .planet {
      margin-left: unset !important;
      margin-top: unset !important;
      position: relative;
      width: 100% !important;
      padding: 5% 33%;
  }

  .planetOrbit{
    display: none;
  }

  .planetName{
    font-size: 3em;
  }

  #title {
    height: auto !important;
    margin-bottom: 0px;
  }

  #particles-js canvas{
      position: fixed;
      width: 100%;
      height: 100%;
      left: 0;
      top: 0;
      z-index: -1;
  }

  #siteText{
    display: block;
    position: unset;
    margin: 0 auto;
    margin-bottom: -100px;
    width: 75%;
  }
}

